first draft of our new vignette

--- a/orchaRd.Rmd
+++ b/orchaRd.Rmd
@@ -1,11 +1,10 @@
 ---
 title: "orchaRd: An R package for drawing 'orchard' plots (and 'caterpillars' plots) from meta-analyses and meta-regressions with categorical moderators"
-author: "S. Nakagawa, M. Lagisz, R. E. O’Dea, J. Rutkowska, Y. Yang, D.W.A. Noble, and A. M. Senior"
+author: "S. Nakagawa, M. Lagisz, R. E. O’Dea, J. Rutkowska, Y. Yang, D.W.A. Noble, & A. M. Senior"
 date: "`r Sys.Date()`"
 geometry: margin=1.5cm
 fontsize: 10pt
 output: pdf_document
-	toc:TRUE
 ---
 
 ```{r setup, include = FALSE}
@@ -21,7 +20,7 @@ knitr::opts_chunk$set(
 
 `orchaRd` allows users to create pretty orchard plots that contain both confidence intervals (CIs) and prediction intervals (PIs) around point estimates for different categorical moderators, plots the effect size distribution over top such estimates and weights effect sizes by their precision (1/standard error, SE) or sample size. `orchaRd` takes a `metafor` object of class `rma.mv` or `rma` (Viechtbauer, 2010) and plots the results for the meta-analytic or meta-regression model. Currently, only meta-regression models with a single moderator variable are allowed or intercept only meta-analytic models. `orchaRd` uses `ggplot2` (Wickham, 2009) for plotting, and as such, layers can be added directly to make plots customizable to the users needs. Also, the function `orchard_plot` uses the principles of bee swarm plots to visualise indiviudal effect sizes (Elund 2012; also see Clarke & Sherrill-Mix 2012; Sherrill-Mix & Clarke 2012).
 
-In addition to orchard plots, we have another plotting function `caterpillars` . Furthermore, the pacakge `orchaRd` comes with two functions useful for mulitlevel meta-analysis and meta-regression (i.e., `rma.mv`): 1) `i2_ml` to calculate the 'total' I^2^ along with I^2^ for each level (*sensu* Nakagawa & Santos 2012; see also higgins....XXXX; Senior et al. 2016) and 2) `r2_ml` to calcuate marginal and conditional R^2^ () for mixed models (*sensu* Nakagawa & Schielzeth 2013; see also ....). 
+In addition to orchard plots, we have another plotting function `caterpillars` to draw caterpillar(s) plots. Furthermore, the pacakge `orchaRd` comes with two functions useful for mulitlevel meta-analysis and meta-regression (i.e., `rma.mv`): 1) `i2_ml` to calculate the 'total' I^2^ along with I^2^ for each level (*sensu* Nakagawa & Santos 2012; see also ; Senior et al. 2016) and 2) `r2_ml` to calcuate marginal and conditional R^2^ for mixed models (*sensu* Nakagawa & Schielzeth 2013). 
 
 # Citing orchaRd
 
@@ -39,38 +38,39 @@ install.packages("tidyverse")
 install.packages("metafor")
 install.packages("patchwork")
 devtools::install_github("itchyshin/orchard_plot", subdir = "orchaRd", force = TRUE, build_vignettes = TRUE)
+```
 
+Installation will make the primary functions accessible to users along with their help files. You will also need the `tidyverse` and `metafor` packages.
+
+```{r echo = FALSE, eval = TRUE}
 library(orchaRd)
 library(patchwork)
 library(tidyverse)
 library(metafor)
 ```
 
-Installation will make the primary functions accessible to users along with their help files. You will also need the `tidyverse` and `metafor` packages.
-
 # Examples of orchard plots along with caterpillars plot
 
 In this vignette we'll walk the reader through a number of case studies and show you how you can create beautiful looking orchard plots. We overview three different case studies that make use of different effect sizes and moderators. The datasets associated with each case study come as part of the `orchaRd` package.
 
-
-
 #### Example 1: Dietary Restriction and Lifespan
-English and Uller (2016) performed a systematic review and meta-analysis on the effects of early life dietary restriction (a reduction in a major component of the diet without malnutrition; e.g. caloric restriction) on average at death, using the standardised mean difference (often called d). They found that across the whole dataset, there was little evidence for an effect of dietary restriction on mean age at death. Here we'll use the dataset to first calculate the effect size measures and then fit an intercept only, meta-analytic model.
+
+English and Uller (2016) performed a systematic review and meta-analysis on the effects of early life dietary restriction (a reduction in a major component of the diet without malnutrition; e.g. caloric restriction) on average age at death, using the standardised mean difference (often called *d*). They found that, across the whole dataset, there was little evidence for an effect of dietary restriction on mean age at death. Here we'll use the dataset to first calculate the effect size measures and then fit an intercept only, meta-analytic model.
 
 ```{r echo = TRUE, eval = TRUE}
 
 data(english)
 
 # We need to calculate the effect sizes, in this case d
-english<-metafor::escalc(measure="SMD", n1i=NStartControl, sd1i=SD_C, m1i=MeanC, n2i=NStartExpt, sd2i=SD_E, m2i=MeanE, data=english)
+english <- escalc(measure = "SMD", n1i = NStartControl, sd1i = SD_C, m1i = MeanC, n2i = NStartExpt, sd2i = SD_E, m2i = MeanE, 
+                  var.names=c("SMD","vSMD"),
+                  data = english)
 
-
-english_MA<-metafor::rma.mv(yi=yi, V=vi, random=list(~1|EffectID), data=english)
+english_MA <- rma.mv(yi = SMD, V = vSMD, random = list( ~ 1 | StudyNo, ~ 1 | EffectID), data = english)
 summary(english_MA)
-
 ```
 
-We can see from the above that we have fit a meta-analytic model without an intercept and thus the mean estimates is the overall effect size on the effects of caloric restriction on mean death across all studies examined. Now that we have fit our meta-analytic model we can get the confidence intervals and prediction intervals with a few functions in the `orchaRd` package. If one is interested in getting the table of results we can use the `mod_results` function. This will allow users to make nice tables of the results if needed. We can do that as follows:
+We have fit a meta-analytic model and thus the only estimate we see is the overall effect size on the effects of caloric restriction on mean death across all studies examined. Now that we have fit our meta-analytic model we can get the confidence intervals and prediction intervals with a few functions in the `orchaRd` package. If one is interested in getting the table of results we can use the `mod_results` function. This will allow users to make nice tables of the results if needed. We can do that as follows:
 
 ```{r echo = TRUE, eval = TRUE}
 
@@ -82,60 +82,105 @@ print(model_results)
 If we instead want to create an orchard plot and visualise the results we can do so quite simply as:
 
 ```{r Figure1, echo = TRUE, eval = TRUE, fig.width = 6, fig.height = 4, fig.cap = "\\label{fig:Figure1}Orchard plot of the impact caloric restriction using standardised mean difference"}
-orchard_plot(english_MR_int, mod="Int", xlab = "Standardised mean difference", 
+orchard_plot(english_MA, mod="Int", xlab = "Standardised mean difference", 
   transfm = "none") 
 ```
 
-In Figure \ref{fig:Figure1}, we simply add in the metafor model and it will create a default orchard plot. Alternatively, we could also add in the table of results. Some people may wish to present the heterogeneity index, I^2^ (also, we change the colours of the 'trunk and furit' by adding a few arguments). <---comments ---->
+In Figure \ref{fig:Figure1}, we simply add in the metafor model and it will create a default orchard plot. Alternatively, we could also add in the table of results. Also. some people may wish to present the heterogeneity index, I^2^ and, at the same time, change the colours of the 'trunk and furit' by adding a few arguments.
 
 ```{r Figure2, echo = TRUE, eval = TRUE, fig.width = 6, fig.height = 4, fig.cap = "\\label{fig:Figure2}Orchard plot of the impact caloric restriction using standardised mean difference but instead of using the metafor model, using the model results table", messages = FALSE, warnings = FALSE}
 
 # use i2_sn function to obtain the total I^2
 
+I2 <- i2_ml(english_MA)
 
 orchard_plot(model_results, mod="Int", xlab = "Standardised mean difference") + 
-  
+  annotate(geom="text", x= -0.7, y= 1.5, label= paste0("italic(I)^{2} == ", round(I2[1],4)*100), # I want to use % but cannot do should come back
+              color="black", parse = TRUE, size = 5) +
   scale_fill_manual(values="grey") +
   scale_colour_manual(values="grey")
 ```
 
-Figure \ref{fig:Figure2} and Figure \ref{fig:Figure1} above show that overall estimate from a random-effects meta-analysis of 77 effect sizes is centered on zero, with a 95% CI that spans the line of no-effect. The prediction intervals clearly demonstrate the high level of heterogeneity, with effects size less than -0.5 and greater than 0.5 predicted to be observed. 
+Figure \ref{fig:Figure2} and Figure \ref{fig:Figure1} above show that overall estimate from a random-effects meta-analysis of 77 effect sizes is centered on zero, with a 95% CI that spans the line of no-effect. The prediction intervals clearly demonstrate the high level of heterogeneity (over 75%), with effects size less than -0.5 and greater than 0.5 predicted to be observed. 
+
+We can now draw a comparable caterpillar plot by using the function `caterpillars`.
+
+```{r Figure3, echo = TRUE, eval = TRUE, fig.width = 6, fig.height = 6, fig.cap = "\\label{fig:Figure3}Catterpilar plot of the impact caloric restriction using standardised mean difference", messages = FALSE, warnings = FALSE}
+
+# a caterpillar plot (not a caterpillars plot)
+caterpillars(model_results, mod="Int", xlab = "Standardised mean difference") 
+```
+It is now interesting to compare how the same data set can be visualised different by look at Figure \ref{fig:Figure2} and Figure \ref{fig:Figure3}. It is good that the caterpillar plot can show CIs for each effect size. An equivalent function was done with the size of fruit in the orchard plot. 
 
 In a subsequent publication, Senior et al. (2017) analysed this dataset for effects of dietary-restriction on among-individual variation in the age at death using the log coefficient of variation ratio. A major prediction in both English & Uller (2016) and Senior et al. (2017) was that the type of manipulation, whether the study manipulated quality of food versus the quantity of food would be important. As such, we can fit a meta-regression model to test whether the moderator "Manipulation Type" `ManipType` impacts our results on the mean and variance
 
-```{r Figure3, fig.width = 6, fig.height = 8, fig.cap = "\\label{fig:Figure3}Orchard plot of diet qualities impact on SMD (top) and log coefficient of variation (bottom)"}
+```{r Figure4, fig.width = 6, fig.height = 8, fig.cap = "\\label{fig:Figure4}Orchard plot of diet qualities impact on SMD (top) and log coefficient of variation (bottom)"}
 # First we need to calculate the lnCVR
-english<-metafor::escalc(measure="CVR", n1i=NStartControl, sd1i=SD_C, m1i=MeanC, n2i=NStartExpt, sd2i=SD_E, m2i=MeanE, data=english, append = TRUE, var.names=c("lnCVR.yi","lnCVR.vi"))
+english <- escalc(measure = "CVR", n1i = NStartControl, sd1i = SD_C, m1i = MeanC, 
+                        n2i = NStartExpt, sd2i = SD_E, m2i = MeanE,
+                        var.names=c("lnCVR","vlnCVR"),
+                        data = english)
 
+# Now we can fit the meta-regression model (contrast)
+english_MR0 <- rma.mv(yi = SMD, V = vSMD, mods = ~ ManipType, 
+                     random = list(~ 1 | StudyNo, ~ 1 | EffectID), data = english)
+summary(english_MR0)
 
-# Now we can fit the meta-regression models
-english_MR<-metafor::rma.mv(yi=yi, V=vi, mods=~ManipType-1, random=list(~1|EffectID), data=english)
+# Now we can fit the meta-regression model without the intercept
+# we need this intercept-less model for the orchard plot
+english_MR <- rma.mv(yi = SMD, V = vSMD, mods = ~ ManipType - 1, 
+                     random = list(~ 1 | StudyNo, ~ 1 | EffectID), data = english)
 summary(english_MR)
 
 # Again, we can create a table of results
-model_results <- orchaRd::mod_results(english_MR, mod="ManipType")
-print(model_results)
+res2 <- mod_results(english_MR, mod = "ManipType")
+print(res2)
 
-# Lets fit a meta-regression - I am modelling non-independence here (article).
-senior_MR<-metafor::rma.mv(yi=lnCVR.yi, V=lnCVR.vi, mods=~ManipType-1, random=list(~1|EffectID), 
-  data=english)
+# we fit a meta-regression (contrast) for the log coefficient of variation
+senior_MR0 <- rma.mv(
+  yi = lnCVR, V = vlnCVR, mods = ~ ManipType, random = list(~ 1 | StudyNo, ~ 1 | EffectID),
+  data = english
+)
+summary(senior_MR0)
+
+# Let's fit a meta-regression without the intercept
+senior_MR <- rma.mv(
+  yi = lnCVR, V = vlnCVR, mods = ~ ManipType - 1, random = list(~ 1 | StudyNo, ~ 1 | EffectID),
+  data = english
+)
 summary(senior_MR)
 
 # creating a table of results
-senior_results <- mod_results(senior_MR, "ManipType")
-print(senior_results)
+res3 <- mod_results(senior_MR, "ManipType")
+print(res3)
 
 
-# We can now plot SMD and lnCVR beside each other and compar ethe results
-p1 <- orchard_plot(english_MR, mod = "ManipType", xlab = "Standardised mean difference")
+# We can now plot SMD and lnCVR beside each other and compare the results
+p1 <- orchard_plot(english_MR, 
+                   mod = "ManipType", xlab = "Standardised mean difference")
 
-p2 <- orchard_plot(senior_MR, mod = "ManipType", xlab = "log(CV ratio) (lnCVR)")
+p2 <- orchard_plot(senior_MR,
+  mod = "ManipType", xlab = "log(CV ratio) (lnCVR)")
 
-p1/p2
-
+p1 / p2
 ```
 
-Our orchard plot for the log coefficient of variation demonstrates that, while restrictions on dietary quality and quantity do not affect the average age at death (top of Figure \ref{fig:Figure3}), among-individual variation may be altered by quality restrictions (bottom of Figure \ref{fig:Figure3}). The effect is negative suggesting that the coefficient of variation in the control group is lower than that in the treatment group, and the 95% CI does not span zero. Again though, the effect is heterogeneous; a substantial number of positive effects are still predicted. 
+Our orchard plot for the log coefficient of variation demonstrates that, while restrictions on dietary quality and quantity do not affect the average age at death (top of Figure \ref{fig:Figure4}), among-individual variation may be altered by quality restrictions (bottom of Figure \ref{fig:Figure4}). The effect is negative suggesting that the coefficient of variation in the control group is lower than that in the treatment group, and the 95% CI does not span zero. Again though, the effect is heterogeneous; a substantial number of positive effects are still predicted. 
+
+Let's draw comparable caterpillars plots to compare these two results again. 
+
+```{r Figure5, echo = TRUE, eval = TRUE, fig.width = 6, fig.height = 8, fig.cap = "\\label{fig:Figure5}Catterpilar plot of diet qualities impact on the log coefficient of variation (lnCVR)", messages = FALSE, warnings = FALSE}
+
+# We can now plot SMD and lnCVR beside each other and compare the results
+p1c <- caterpillars(english_MR, 
+                   mod = "ManipType", xlab = "Standardised mean difference")
+
+p2c <- caterpillars(senior_MR,
+  mod = "ManipType", xlab = "log(CV ratio) (lnCVR)")
+
+p1c / p2c
+```
+Now compare between Figure \ref{fig:Figure4} and Figure \ref{fig:Figure5}. We think they both look nice. 
 
 #### Example 2: Predation and Invertebrate Community 
 
@@ -148,45 +193,72 @@ Here again, we can create orchard plots of the model results, but we'll show how
 data(eklof)
 
 # Calculate the effect size
-eklof<-escalc(measure="ROM", n1i=N_control, sd1i=SD_control, m1i=mean_control, 
-  n2i=N_treatment, sd2i=SD_treatment, m2i=mean_treatment, data=eklof)
+eklof <- escalc(
+  measure = "ROM", n1i = N_control, sd1i = SD_control, m1i = mean_control,
+  n2i = N_treatment, sd2i = SD_treatment, m2i = mean_treatment,
+  var.names = c("lnRR", "vlnRR"),
+  data = eklof
+)
 
-# Add the unit level predictor
-eklof$Datapoint<-as.factor(seq(1, dim(eklof)[1], 1))
+# Add the observation level factor
+eklof$Datapoint <- as.factor(seq(1, dim(eklof)[1], 1))
 
 # Also, we can get the sample size, which we can use for weighting if we would like
-eklof$N <- rowSums(eklof[,c("N_control", "N_treatment")])
+eklof$N <- rowSums(eklof[, c("N_control", "N_treatment")])
 
-# fit a MLMR - accouting for some non-independence
-eklof_MR<-rma.mv(yi=yi, V=vi, mods=~ Grazer.type-1, random=list(~1|ExptID, ~1|Datapoint), 
-  data=eklof)
+# fit a meta-regression with the intercept (contrast)
+eklof_MR0 <- rma.mv(
+  yi = lnRR, V = vlnRR, mods = ~ Grazer.type, random = list(~ 1 | ExptID, ~ 1 | Datapoint),
+  data = eklof
+)
+
+summary(eklof_MR0)
+
+# fit a meta-regression without the intercept and we can use this model for the orchard plot
+eklof_MR <- rma.mv(
+  yi = lnRR, V = vlnRR, mods = ~ Grazer.type - 1, random = list(~ 1 | ExptID, ~ 1 | Datapoint),
+  data = eklof
+)
 
 ```
 
-Above we have fit a meta-regression model using "Grazer Type" as a moderator which is predicted to explain variation in log response ratios. We can demonstrate a few simple changes users can make, but we note here that users can make far more complex changes down the line if needed, but we'll save those for the last example. The first is the angle at which the y-axis labels are positioned (bottom of Figure \ref{fig:Figure4}):
+Above we have fit a meta-regression model using "Grazer Type" as a moderator which is predicted to explain variation in log response ratios. We can demonstrate a few simple changes users can make, but we note here that users can make far more complex changes down the line if needed, but we'll save explaining these more complex changes for the last example. The first is the angle at which the y-axis labels are positioned (bottom of Figure \ref{fig:Figure6}):
 
-```{r Figure4, echo = TRUE, eval = TRUE, fig.width = 6, fig.height = 8, fig.cap = "\\label{fig:Figure4}Orchard plots of the effects of predation on benthic invertebrate communities compared using the log response ratio. Top panel is the default plot and bottom panel a plot containing changes in label axes"}
+```{r Figure6, echo = TRUE, eval = TRUE, fig.width = 6, fig.height = 8, fig.cap = "\\label{fig:Figure6}Orchard plots of the effects of predation on benthic invertebrate communities compared using the log response ratio. Top panel is the default plot and bottom panel a plot containing changes in label axes"}
 
-p3 <- orchard_plot(eklof_MR, mod = "Grazer.type", xlab = "log(Response ratio) (lnRR)")
-p4 <- orchard_plot(eklof_MR, mod = "Grazer.type", xlab = "log(Response ratio) (lnRR)", angle = 45) 
+p3 <- orchard_plot(eklof_MR, mod = "Grazer.type", xlab = "log(Response ratio) (lnRR)", 
+  transfm = "none") 
+
+p4 <- orchard_plot(eklof_MR, mod = "Grazer.type", xlab = "log(Response ratio) (lnRR)", 
+  transfm = "none", angle = 45) 
 
 p3/p4
 
 ```
 
-The other thing we can change is the type of scaling we wish to use. Lets say we are interested in scaling the effect size by the total sample size of the study we use a vector of N, sample size (bottom of Figure \ref{fig:Figure5}):
+The other thing we can change is the type of scaling we wish to use. Let's say we are interested in scaling the effect size by the total sample size of the study we use a vector of N, sample size (bottom of Figure \ref{fig:Figure7}):
 
-```{r Figure5, echo = TRUE, eval = TRUE, messages = FALSE, warnings = FALSE, fig.width = 6, fig.height = 8, fig.cap = "\\label{fig:Figure5}Orchard plots of the effects of predation on benthic invertebrate communities compared using the log response ratio. Top panel is the default plot and bottom panel a plot containing changes in label axes and scaling with sample size instead of precision"}
+```{r Figure7, echo = TRUE, eval = TRUE, messages = FALSE, warnings = FALSE, fig.width = 6, fig.height = 8, fig.cap = "\\label{fig:Figure7}Orchard plots of the effects of predation on benthic invertebrate communities compared using the log response ratio. Top panel is the default plot and bottom panel a plot containing changes in label axes and scaling with sample size instead of precision"}
 
 p5 <- orchard_plot(eklof_MR, mod = "Grazer.type", xlab = "log(Response ratio) (lnRR)") 
 
-p6 <- orchard_plot(eklof_MR, mod = "Grazer.type", xlab = "log(Response ratio) (lnRR)", angle = 45, N = eklof$N) 
+p6 <- orchard_plot(eklof_MR, mod = "Grazer.type", xlab = "log(Response ratio) (lnRR)", 
+                   angle = 45, N = eklof$N) 
 
 p5/p6
 
 ```
 
-Overall, our orchard plot shows the results of a re-analysis of their data. The effects are negative for both Gastropods and Amphipods suggesting that mean abundance/biomass in the control group is lower than in the treatment groups, although the effect is largest, and is statistically significant, for Amphipods. In both cases the prediction intervals reveal the extent of heterogeneity, with positive effects predicted to be observed.
+Overall, our orchard plot shows the results of a re-analysis of their data. The estimated mean effects are negative for both gastropods and amphipods suggesting that mean abundance/biomass in the control group is lower than in the treatment groups, although the effect is largest, and is statistically significant, for amphipods. In both cases the prediction intervals reveal the extent of heterogeneity, with positive effects predicted to be observed.
+
+Again, we can also draw the caterpillars-plot couterpart for this dataset (bottom of Figure \ref{fig:Figure8}):
+
+```{r Figure8, echo = TRUE, eval = TRUE, messages = FALSE, warnings = FALSE, fig.width = 6, fig.height = 4, fig.cap = "\\label{fig:Figure8}Caterpillars plot of the effects of predation on benthic invertebrate communities compared using the log response ratio"}
+
+caterpillars(eklof_MR, mod = "Grazer.type", xlab = "log(Response ratio) (lnRR)") 
+
+```
+Like last time, we compare between Figure \ref{fig:Figure7} and Figure \ref{fig:Figure8}. Again, they both look quite informative. 
 
 #### Example 3: Maternal-Offspring Morphological Correlations
 
@@ -208,26 +280,21 @@ Here we have used an orchard plot to represent the results obtained when meta-an
 
 Noe we can plot a default orchard plot, scaling each effect size by N. Also, because we are using Zr, we can use transfm = "tanh" and it will do the conversions for us:
 
-```{r Figure6, echo = TRUE, eval = TRUE, messages = FALSE, warnings = FALSE, fig.width = 6, fig.height = 8, fig.cap = "\\label{fig:Figure6}Orchard plot of the the strength of correlation between maternal and offspring size within-species"}
+```{r Figure9, echo = TRUE, eval = TRUE, messages = FALSE, warnings = FALSE, fig.width = 6, fig.height = 8, fig.cap = "\\label{fig:Figure9}Orchard plot of the the strength of correlation between maternal and offspring size within-species"}
   
   #Plot the meta-regression model
-	p7 <- orchard_plot(lim_MR, mod = "Phylum", xlab = "Correlation coefficient", 
+  orchard_plot(lim_MR, mod = "Phylum", xlab = "Correlation coefficient", 
     alpha = 0.5, transfm = "tanh", angle = 45, N = lim$N, cb = FALSE)
-
-  p7
 ```
 
-Now that we have Figure \ref{fig:Figure6} we can do some small changes to make it pretty and add some more details, such as between study heterogenity and R2 for phylum. Currently, the cb argument is "FALSE", we can change this to "TRUE" to use colour blind friendly colours. Additionally, because we are using `ggplot` we can add element to the figure to make it look pretty. 
+Now that we have Figure \ref{fig:Figure9}, we can do some small changes to make it pretty and add some more details, such as between study heterogenity and R2 for phylum (we use ). Currently, the cb argument is "FALSE", we can change this to "TRUE" to use colour blind friendly colours. Additionally, because we are using `ggplot` we can add element to the figure to make it look pretty. 
 
-```{r Figure7, echo = TRUE, eval = TRUE, messages = FALSE, warnings = FALSE, fig.width = 6.5, fig.height = 8, fig.cap = "\\label{fig:Figure7}Orchard plot of the the strength of correlation between maternal and offspring size within-species"}
-  # Lets add the I2 on the figure above the legend to convey how much between study heterogenity we have
-orchard_plot(lim_MR_int, mod = "Phylum", xlab = "Correlation coefficient", 
-    alpha = 0.5, transfm = "tanh", angle = 45, N = lim$N, cb = FALSE) + 
-  
-  annotate(geom="text", x=0.7, y=0.50, label=paste0("I^{2}[study] == ", I2_study),
-              color="black", parse = TRUE, size = 6)
+```{r Figure10, echo = TRUE, eval = TRUE, messages = FALSE, warnings = FALSE, fig.width = 6.5, fig.height = 8, fig.cap = "\\label{fig:Figure10}Orchard plot of the the strength of correlation between maternal and offspring size within-species"}
+  # Lets add the R2 on the figure as well as little modifications:
+  R2 <- r2_ml(lim_MR)
 
-	orchard_plot(lim_MR, mod = "Phylum", xlab = "Correlation coefficient (r)", alpha = 0.5, transfm = "tanh", angle = 45, N = lim$N, cb = TRUE) +
+  # We can draw an orchard plot with R2
+  orchard_plot(lim_MR, mod = "Phylum", xlab = "Correlation coefficient (r)", alpha = 0.5, transfm = "tanh", angle = 45, N = lim$N, cb = TRUE) +
 
     theme(legend.position= c(0.05, 0.99), 
         
@@ -243,26 +310,44 @@ orchard_plot(lim_MR_int, mod = "Phylum", xlab = "Correlation coefficient",
 
   	scale_x_continuous(expand = c(0.1,0.1)) +
 
-    annotate(geom="text", x=0.7, y=7.4, label=paste0("R^{2} == ", R2),
-              color="black", parse = TRUE, size = 6)
+    annotate(geom="text", x=-0.5, y=0.7, label=paste0("italic(R)^{2} == ", round(R2[1],4)*100), # how to put % (I need to know!)
+              color="black", parse = TRUE, size = 4)
 ```
 
-As in Figure \ref{fig:Figure7}, new elements can be added to the `orchard_plot` to modify it as one sees fit. It will overwrite existing elements. From our orchard plots above, it is clear that the analysis is dominated by data from Chordates and Arthropods, with the other Phyla being much more poorly represented. Second, there is a difference between the strength of a typical correlation within these two well represented groups (the correlation is stronger in Chordates), which arguably would explain the phylogenetic signals detected by Lim et al. (2014). Lastly, although there are differences within the typical correlation between Chordates and Arthropods, there remains a large overlap in predicted range of individual effect sizes; individual species within Phyla are still highly variable.
+As in Figure \ref{fig:Figure10}, new elements can be added to the `orchard_plot` to modify it as one sees fit. It will overwrite existing elements. From our orchard plots above, it is clear that the analysis is dominated by data from Chordates and Arthropods, with the other Phyla being much more poorly represented. Second, there is a difference between the strength of a typical correlation within these two well represented groups (the correlation is stronger in Chordates), which arguably would explain the phylogenetic signals detected by Lim et al. (2014). Lastly, although there are differences within the typical correlation between Chordates and Arthropods, there remains a large overlap in predicted range of individual effect sizes; individual species within Phyla are still highly variable.
 
+Finally, we make a comparable caterpillars plot.
+```{r Figure11, echo = TRUE, eval = TRUE, messages = FALSE, warnings = FALSE, fig.width = 6, fig.height = 10, fig.cap = "\\label{fig:Figure11}Caterpillars plot of the the strength of correlation between maternal and offspring size within-species"}
+  
+  #Plot the meta-regression model
+  caterpillars(lim_MR, mod = "Phylum", xlab = "Correlation coefficient", transfm = "tanh")
+```
+Compared to the orchard plot (Figure \ref{fig:Figure10}), Figure \ref{fig:Figure11} does not look as elegant, unlike the previous comparisions.
 
 \newpage
 # References 
 
-Eklof J.S., Alsterberg C., Havenhand J.N., Sundback K., Wood H.L., Gamfeldt L. 2012. Experimental climate change weakens the insurance effect of biodiversity. Ecology Letters, 15:864-872.
+Clarke E, Sherrill-Mix S. ggbeeswarm: categorical scatter (violin point) plots. 2017. *R package* version 0.6.0 
 
-English S, Uller T. 2016. Does early-life diet affect longevity? A meta-analysis across experimental studies. Biology Letters, 12: http://doi:10.1098/rsbl.2016.0291
+Eklof J.S., Alsterberg C., Havenhand J.N., Sundback K., Wood H.L., Gamfeldt L. 2012. Experimental climate change weakens the insurance effect of biodiversity. *Ecology Letters*, 15:864-872.
 
-Lim J.N., Senior A.M., Nakagawa S. 2014. Heterogeneity in individual quality and reproductive trade-offs within species. Evolution. 68(8):2306-18. doi: 10.1111/evo.12446
+Eklund A. Beeswarm: the bee swarm plot, an alternative to stripchart. 2012. *R package* version 0.1. 
 
-Senior, A.M., Nakagawa, S., Simpson, S.J., Raubenheimer, D., Noble D.W.A. 2017. Dietary restriction increases variability in longevity. Biology Letters, 13: http://doi.org/10.1098/rsbl.2017.0057
+English S, Uller T. 2016. Does early-life diet affect longevity? A meta-analysis across experimental studies. *Biology Letters*, 12: http://doi:10.1098/rsbl.2016.0291
 
-Viechtbauer W. 2010. Conducting meta-analyses in R with the metafor package. Journal of Statistical Software, 36(3):1-48.
+Lim J.N., Senior A.M., Nakagawa S. 2014. Heterogeneity in individual quality and reproductive trade-offs within species. *Evolution*. 68(8):2306-18. doi: 10.1111/evo.12446
 
-Wickham H. 2009. ggplot2 : elegant graphics for data analysis. New York ; London: Springer.
+Nakagawa, S, and Santos, E.S.A. 2012. Methodological issues and advances in biological meta-analysis. *Evolutionary Ecology* 26(5): 1253-1274.
 
-TODO - add ggswarm plot ref and related - NS x 2 papers
+Nakagawa, S, and Schielzeth, H. 2013. A general and simple method for obtaining R2 from generalized linear mixed‐effects models. *Methods in Ecology and Evolution* 4(2): 133-142.
+
+Sherrill-Mix S, Clarke E. Plot categorical data using quasirandom noise and density estimates. 2017. *R package* version 0.4.5. 
+
+Senior, A. M., Grueber, C. E., Kamiya, T., Lagisz, M., O’Dwyer, K., Santos, E. S. A. & Nakagawa S. 2016. Heterogeneity in ecological and evolutionary meta-analyses: its magnitudes and implications. *Ecology* 97(12): 3293-3299.
+
+Senior, A.M., Nakagawa, S., Simpson, S.J., Raubenheimer, D., Noble D.W.A. 2017. Dietary restriction increases variability in longevity. *Biology Letters*, 13: http://doi.org/10.1098/rsbl.2017.0057
+
+Viechtbauer W. 2010. Conducting meta-analyses in R with the metafor package. *Journal of Statistical Software*, 36(3):1-48.
+
+Wickham H. 2009. ggplot2: elegant graphics for data analysis. New York ; London: Springer.
+
