--- a/orchaRd.Rmd
+++ b/orchaRd.Rmd
@@ -4,7 +4,7 @@ author: "S. Nakagawa, M. Lagisz, R. E. O’Dea, J. Rutkowska, Y. Yang, D.W.A. No
 date: "`r Sys.Date()`"
 geometry: margin=1.5cm
 fontsize: 10pt
-output: pdf_document
+output: bookdown::html_document2
 ---
 
 ```{r setup, include = FALSE}
@@ -18,9 +18,9 @@ knitr::opts_chunk$set(
 
 # Introduction
 
-`orchaRd` allows users to create pretty orchard plots that contain both confidence intervals (CIs) and prediction intervals (PIs) around point estimates for different categorical moderators, plots the effect size distribution over top such estimates and weights effect sizes by their precision (1/standard error, SE) or sample size. `orchaRd` takes a `metafor` object of class `rma.mv` or `rma` (Viechtbauer, 2010) and plots the results for the meta-analytic or meta-regression model. Currently, only meta-regression models with a single moderator variable are allowed or intercept only meta-analytic models. `orchaRd` uses `ggplot2` (Wickham, 2009) for plotting, and as such, layers can be added directly to make plots customizable to the users needs. Also, the function `orchard_plot` uses the principles of bee swarm plots to visualise indiviudal effect sizes (Elund 2012; also see Clarke & Sherrill-Mix 2012; Sherrill-Mix & Clarke 2012).
+`orchaRd` allows users to create pretty orchard plots that contain both confidence intervals (CIs) and prediction intervals (PIs) around point estimates for different categorical moderators, plots the effect size distribution over top such estimates and weights effect sizes by their precision (1/standard error, SE) or sample size. `orchaRd` takes a `metafor` object of class `rma.mv` or `rma` (Viechtbauer, 2010) and plots the results for the meta-analytic or meta-regression model. Currently, only meta-regression models with a single moderator variable are allowed or intercept only meta-analytic models. `orchaRd` uses `ggplot2` (Wickham, 2009) for plotting, and as such, layers can be added directly to make plots customisable to the users needs. Also, the function `orchard_plot` uses the principles of bee swarm plots to visualise individual effect sizes (Elund 2012; also see Clarke & Sherrill-Mix 2012; Sherrill-Mix & Clarke 2012).
 
-In addition to orchard plots, we have another plotting function `caterpillars` to draw caterpillar(s) plots. Furthermore, the pacakge `orchaRd` comes with two functions useful for mulitlevel meta-analysis and meta-regression (i.e., `rma.mv`): 1) `i2_ml` to calculate the 'total' I^2^ along with I^2^ for each level (*sensu* Nakagawa & Santos 2012; see also ; Senior et al. 2016) and 2) `r2_ml` to calcuate marginal and conditional R^2^ for mixed models (*sensu* Nakagawa & Schielzeth 2013). 
+In addition to orchard plots, users can use the `caterpillars` function to draw caterpillar(s) plots. Furthermore, the package `orchaRd` comes with two functions that are useful for multilevel meta-analysis and meta-regression (i.e., `rma.mv`): 1) `i2_ml` to calculate the 'total' I^2^ along with I^2^ for each level (*sensu* Nakagawa & Santos 2012; see also ; Senior et al. 2016) and 2) `r2_ml` to calculate marginal and conditional R^2^ for mixed models (*sensu* Nakagawa & Schielzeth 2013). 
 
 # Citing orchaRd
 
@@ -82,12 +82,12 @@ print(model_results)
 
 If we instead want to create an orchard plot and visualise the results we can do so quite simply as:
 
-```{r Figure1, echo = TRUE, eval = TRUE, fig.width = 6, fig.height = 4, fig.cap = "\\label{fig:Figure1}Orchard plot of the impact caloric restriction using standardised mean difference"}
+```{r Figure1, echo = TRUE, eval = TRUE, fig.width = 6, fig.height = 4, fig.cap = "Orchard plot of the impact caloric restriction using standardised mean difference"}
 orchard_plot(english_MA, mod="Int", xlab = "Standardised mean difference", 
   transfm = "none") 
 ```
 
-In Figure \ref{fig:Figure1}, we simply add in the metafor model and it will create a default orchard plot. Alternatively, we could also add in the table of results. Also. some people may wish to present the heterogeneity index, I^2^ and, at the same time, change the colours of the 'trunk and furit' by adding a few arguments.
+In Figure \@ref{fig:Figure1}, we simply add in the metafor model and it will create a default orchard plot. Alternatively, we could also add in the table of results. Also. some people may wish to present the heterogeneity index, I^2^ and, at the same time, change the colours of the 'trunk and fruit' by adding a few arguments.
 
 ```{r Figure2, echo = TRUE, eval = TRUE, fig.width = 6, fig.height = 4, fig.cap = "\\label{fig:Figure2}Orchard plot of the impact caloric restriction using standardised mean difference but instead of using the metafor model, using the model results table", messages = FALSE, warnings = FALSE}
 
@@ -96,8 +96,7 @@ In Figure \ref{fig:Figure1}, we simply add in the metafor model and it will crea
 I2 <- i2_ml(english_MA)
 
 orchard_plot(model_results, mod="Int", xlab = "Standardised mean difference") + 
-  annotate(geom="text", x= -0.7, y= 1.5, label= paste0("italic(I)^{2} == ", round(I2[1],4)*100), # I want to use % but cannot do should come back
-              color="black", parse = TRUE, size = 5) +
+  annotate(geom="text", x= -0.7, y= 1.5, label= paste0("italic(I)^{2} == ", round(I2[1],4)*100), color="black", parse = TRUE, size = 5) +
   scale_fill_manual(values="grey") +
   scale_colour_manual(values="grey")
 ```
@@ -252,7 +251,7 @@ p5/p6
 
 Overall, our orchard plot shows the results of a re-analysis of their data. The estimated mean effects are negative for both gastropods and amphipods suggesting that mean abundance/biomass in the control group is lower than in the treatment groups, although the effect is largest, and is statistically significant, for amphipods. In both cases the prediction intervals reveal the extent of heterogeneity, with positive effects predicted to be observed.
 
-Again, we can also draw the caterpillars-plot couterpart for this dataset (bottom of Figure \ref{fig:Figure8}):
+Again, we can also draw the caterpillars-plot counterpart for this dataset (bottom of Figure \ref{fig:Figure8}):
 
 ```{r Figure8, echo = TRUE, eval = TRUE, messages = FALSE, warnings = FALSE, fig.width = 6, fig.height = 4, fig.cap = "\\label{fig:Figure8}Caterpillars plot of the effects of predation on benthic invertebrate communities compared using the log response ratio"}
 
@@ -288,7 +287,7 @@ Noe we can plot a default orchard plot, scaling each effect size by N. Also, bec
     alpha = 0.5, transfm = "tanh", angle = 45, N = lim$N, cb = FALSE)
 ```
 
-Now that we have Figure \ref{fig:Figure9}, we can do some small changes to make it pretty and add some more details, such as between study heterogenity and R2 for phylum (we use ). Currently, the cb argument is "FALSE", we can change this to "TRUE" to use colour blind friendly colours. Additionally, because we are using `ggplot` we can add element to the figure to make it look pretty. 
+Now that we have Figure \ref{fig:Figure9}, we can do some small changes to make it pretty and add some more details, such as between study heterogeneity and R2 for phylum (we use ). Currently, the cb argument is "FALSE", we can change this to "TRUE" to use colour blind friendly colours. Additionally, because we are using `ggplot` we can add element to the figure to make it look pretty. 
 
 ```{r Figure10, echo = TRUE, eval = TRUE, messages = FALSE, warnings = FALSE, fig.width = 6.5, fig.height = 8, fig.cap = "\\label{fig:Figure10}Orchard plot of the the strength of correlation between maternal and offspring size within-species"}
   # Lets add the R2 on the figure as well as little modifications:
@@ -311,8 +310,9 @@ Now that we have Figure \ref{fig:Figure9}, we can do some small changes to make 
 
   	scale_x_continuous(expand = c(0.1,0.1)) +
 
-    annotate(geom="text", x=-0.5, y=0.7, label=paste0("italic(R)^{2} == ", round(R2[1],4)*100), # how to put % (I need to know!)
-              color="black", parse = TRUE, size = 4)
+    annotate(geom="text", x=-0.5, y=0.7, label=paste0("italic(R)^{2} == ", round(R2[1]*100, 2)),color="black", parse = TRUE, size = 4) +
+
+        annotate(geom="text", x=-0.31, y=0.67, label="%",color="black", parse = FALSE, size = 4)
 ```
 
 As in Figure \ref{fig:Figure10}, new elements can be added to the `orchard_plot` to modify it as one sees fit. It will overwrite existing elements. From our orchard plots above, it is clear that the analysis is dominated by data from Chordates and Arthropods, with the other Phyla being much more poorly represented. Second, there is a difference between the strength of a typical correlation within these two well represented groups (the correlation is stronger in Chordates), which arguably would explain the phylogenetic signals detected by Lim et al. (2014). Lastly, although there are differences within the typical correlation between Chordates and Arthropods, there remains a large overlap in predicted range of individual effect sizes; individual species within Phyla are still highly variable.
@@ -323,7 +323,7 @@ Finally, we make a comparable caterpillars plot.
   #Plot the meta-regression model
   caterpillars(lim_MR, mod = "Phylum", xlab = "Correlation coefficient", transfm = "tanh")
 ```
-Compared to the orchard plot (Figure \ref{fig:Figure10}), Figure \ref{fig:Figure11} does not look as elegant, unlike the previous comparisions. This is becuase the groups with samll sample sizes are packed at the top of the figure. 
+Compared to the orchard plot (Figure \ref{fig:Figure10}), Figure \ref{fig:Figure11} does not look as elegant, unlike the previous comparisons. This is because the groups with small sample sizes are packed at the top of the figure. 
 
 \newpage
 # References 
